# taxi_demand_predictor

./: .gitignore  README.md  feature_pipeline.py  frontend.py  pyproject.toml  requirements.txt  sys_arc.puml
.github/workflows/: feature_pipeline.yaml
models/: model.pkl
notebooks/: 01_load_and_validate_raw_DATA.ipynb  02_transform_raw_data_into_ts_data.ipynb  03_transform_ts_data_into_features_and_targets.ipynb  04_transform_raw_data_into_features_and_target.ipynb  05_visualize_training_data.ipynb  06_baseline_model.ipynb  07_xgboost_model.ipynb  08_lightgbm_model.ipynb  09_lightgbm_model_with_feature_engineering.ipynb  10_lightgbm_mode_with_hyperparameter_tuning.ipynb  11_backfill_feature_store.ipynb  12_feature_pipeline.ipynb  13_model_training_pipeline.ipynb
src/: config.py  data.py  data_split.py  inference.py  model.py  paths.py  plot.py
