[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Karthikeya Pervela <pervela.karthikeya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
hopsworks = "^3.7.0"
jupyter = "^1.0.0"
pandas = "<2.2.0"
pyarrow = "^15.0.2"
tqdm = "^4.66.2"
plotly = "^5.20.0"
scikit-learn = "^1.4.2"
xgboost = "^2.0.3"
lightgbm = "^4.3.0"
optuna = "^3.6.1"
python-dotenv = "^1.0.1"
matplotlib = "^3.8.4"
chardet = "^5.2.0"
charset-normalizer = "^3.3.2"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"